--- a/app/src/main/resources/static/auth/resetPassword.html
+++ b/app/src/main/resources/static/auth/resetPassword.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Recuperar Contraseña</title>
+    <title>Reset Password</title>
     <style>
         body { font-family: sans-serif; display: flex; flex-direction: column; align-items: center; padding-top: 50px; }
         .box { border: 1px solid #ccc; padding: 20px; border-radius: 8px; }
@@ -12,26 +12,25 @@
 </head>
 <body>
     <div class="box">
-        <h2>Nueva Contraseña</h2>
-        <p>Ingresa tu nueva clave de acceso:</p>
-        <input type="password" id="pass1" placeholder="Nueva contraseña">
-        <input type="password" id="pass2" placeholder="Repite la contraseña">
-        <button onclick="cambiarPassword()">Cambiar Contraseña</button>
+        <h2>New Password</h2>
+        <p>Enter your new password:</p>
+        <input type="password" id="pass1" placeholder="New password">
+        <input type="password" id="pass2" placeholder="Repeat the password">
+        <button onclick="changePassword()">Change Password</button>
     </div>
 
     <script>
-        async function cambiarPassword() {
+        async function changePassword() {
             const p1 = document.getElementById('pass1').value;
             const p2 = document.getElementById('pass2').value;
             const token = new URLSearchParams(window.location.search).get('token');
 
             if (p1 !== p2) {
-                alert("Las contraseñas no coinciden");
+                alert("The passwords do not match.");
                 return;
             }
 
-            // REUTILIZAMOS tu endpoint de confirmar, ya que hace lo mismo:
-            // Busca por token, cambia pass, activa y borra token.
+            //Reutilizamos el endpoint que ya teniamos desde antes
             const response = await fetch('/api/users/confirm', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -39,10 +38,10 @@
             });
 
             if (response.ok) {
-                alert("¡Contraseña actualizada! Ahora puedes iniciar sesión.");
+                alert("¡Password updated! Now you can log in.");
                 window.location.href = "/auth/login.html";
             } else {
-                alert("El enlace ha expirado o es inválido.");
+                alert("The link has expired or is invalid.");
             }
         }
     </script>
